--- a/static/popup.css
+++ b/static/popup.css
@@ -50,11 +50,19 @@ body {
     gap: 5px;
 }
 
+.palettes-container {
+    display: grid;
+    gap: 5px;
+}
+
 .palette {
     display: flex;
     justify-content: space-between;
+    border-radius: 5px;
 }
 
 .palette div {
     flex: 1 1 0%;
+    padding: 3px;
+    text-align: center;
 }
