Style elements and generate better palettes

--- a/static/popup.css
+++ b/static/popup.css
@@ -11,58 +11,149 @@ body {
         "Open Sans",
         "Helvetica Neue",
         sans-serif;
+    background: #fff;
     width: 400px;
     max-width: 400px;
     max-height: 600px;
     margin: 0;
-    padding: 10px;
+    padding: 20px;
 }
 
-#pick-color {
-    padding: 5px 10px;
+button {
+    all: unset;
     cursor: pointer;
+    border-radius: 100%;
+    transition: background-color 0.2s ease;
 }
 
-#close {
-    position: relative;
-    right: 0;
+button:has(img) {
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
 }
 
-#color-list {
+button:hover {
+    background: hsla(0, 0%, 0%, 0.1);
+}
+
+/* All Pages Styles */
+
+#main-page,
+#palettes-page {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 5px;
+}
+
+.title {
+    font-size: 18px;
+    margin: 0;
+}
+
+#color-list,
+#palettes-list {
     display: grid;
     list-style-type: none;
-    gap: 5px;
+    gap: 10px;
     padding: 0;
     margin: 0;
 }
 
-.color-entry {
+.list-entry {
     display: flex;
-    justify-content: space-between;
-}
-
-.color-entry div {
-    padding: 5px;
-}
-
-.palette-page {
-    display: grid;
-    gap: 5px;
-}
-
-.palettes-container {
-    display: grid;
-    gap: 5px;
-}
-
-.palette {
-    display: flex;
+    display: inline-flex;
     justify-content: space-between;
     border-radius: 5px;
+    border: solid 1px hsla(260, 5%, 20%, 0.5);
+    transition:
+        box-shadow 0.2s ease,
+        transform 0.2s ease;
 }
 
-.palette div {
+.list-entry:hover {
+    box-shadow:
+        0 0 0 hsl(0, 0%, 0%),
+        0 0 0 hsl(0, 0%, 0%),
+        0 1px 2px hsla(260, 5%, 20%, 0.125),
+        0 2px 4px hsla(260, 5%, 20%, 0.125),
+        0 4px 8px hsla(260, 5%, 20%, 0.125),
+        0 8px 16px hsla(260, 5%, 20%, 0.125),
+        0 16px 32px hsla(260, 5%, 20%, 0.125),
+        0 32px 64px hsla(260, 5%, 20%, 0.125);
+    transform: scale(1.05);
+    transform-origin: center;
+}
+
+/* Main Page Styles */
+
+#main-page .header {
+    justify-content: space-between;
+}
+
+#color-list .list-entry {
+    padding: 10px;
+}
+
+#empty {
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.empty-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
+/* Palettes Page Styles */
+
+#palettes-page .header {
+    justify-content: start;
+}
+
+#palettes-list .list-entry div {
     flex: 1 1 0%;
-    padding: 3px;
+    padding: 5px;
     text-align: center;
+}
+
+#palettes-list .list-entry div {
+    flex: 1 1 0%;
+    padding: 10px;
+    text-align: center;
+}
+
+#palettes-list .list-entry div:first-child {
+    border-radius: 5px 0 0 5px;
+}
+
+#palettes-list .list-entry div:last-child {
+    border-radius: 0 5px 5px 0;
+}
+
+#error {
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.error-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
 }
